--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
     'Lucida Sans', Arial, sans-serif;
 }
 
-body {
+/* body {
   background: linear-gradient(
     90deg,
     rgba(48, 16, 255, 1) 0%,
@@ -144,4 +144,4 @@ h1 {
 
 .edit-icon {
   color: #fff;
-}
+} */
