--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* * {
+ * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -13,6 +13,7 @@ body {
     rgba(100, 115, 255, 1) 100%
   );
 }
+
 .todo-app {
   display: flex;
   flex-direction: column;
@@ -31,7 +32,7 @@ h1 {
   color: #fff;
   font-size: 24px;
 }
-
+/*
 .complete {
   text-decoration: line-through;
   opacity: 0.4;
